--- a/src/usage/repl.adoc
+++ b/src/usage/repl.adoc
@@ -119,31 +119,22 @@ Editor plugins and tools known to work with the babashka nREPL server:
 https://github.com/Olical/conjure[conjure],
 https://github.com/tpope/vim-fireplace[fireplace]
 
-The babashka nREPL server does not write an `.nrepl-port` file at
-startup, but you can easily write a script that launches the server and
-writes the file:
+The babashka nREPL server currently does not write an `.nrepl-port` file at
+startup. Using the following `nrepl` task, defined in a `bb.edn`, you can
+accomplish the same:
 
 [source,clojure]
 ----
-#!/usr/bin/env bb
-
-(import [java.net ServerSocket]
-        [java.io File]
-        [java.lang ProcessBuilder$Redirect])
-
-(require '[babashka.wait :as wait])
-
-(let [nrepl-port (with-open [sock (ServerSocket. 0)] (.getLocalPort sock))
-      cp (str/join File/pathSeparatorChar ["src" "test"])
-      pb (doto (ProcessBuilder. (into ["bb" "--nrepl-server" (str nrepl-port)
-                                       "--classpath" cp]
-                                      *command-line-args*))
-           (.redirectOutput ProcessBuilder$Redirect/INHERIT))
-      proc (.start pb)]
-  (wait/wait-for-port "localhost" nrepl-port)
-  (spit ".nrepl-port" nrepl-port)
-  (.deleteOnExit (File. ".nrepl-port"))
-  (.waitFor proc))
+{:tasks
+ {:requires ([babashka.fs :as fs]
+             [babashka.process :as p :refer [process]]
+             [babashka.wait :as wait])
+  nrepl (let [port (with-open [sock (java.net.ServerSocket. 0)] (.getLocalPort sock))
+              proc (process (str "bb nrepl-server " port) {:inherit true})]
+          (wait/wait-for-port "localhost" port)
+          (spit ".nrepl-port" port)
+          (fs/delete-on-exit ".nrepl-port")
+          (deref proc))}}
 ----
 
 ===== Debugging the nREPL server
