--- a/src/contributing.adoc
+++ b/src/contributing.adoc
@@ -1,6 +1,5 @@
 [[contributing]]
 == Contributing
 
-Visit Babashka book's https://github.com/babashka/book[Github repository] and read
-https://github.com/babashka/book/blob/master/CONTRIBUTING.md[CONTRIBUTING.md]
-on how to contribute.
+Visit Babashka book's https://github.com/babashka/book[Github repository] and
+make an issue and/or PR.
