Add example of reusing deps.edn deps

--- a/src/bb-edn.adoc
+++ b/src/bb-edn.adoc
@@ -16,6 +16,13 @@ added to the classpath:
  :deps {medley/medley {:mvn/version "1.3.0"}}}
 ----
 
+If we have a project that has a deps.edn and would like to reuse those deps in bb.edn:
+
+[source, clojure]
+----
+{:deps {local/deps {:local/root "."}}}
+----
+
 If we have a main function in a file called `script/my_project/main.clj` like:
 
 ----
