--- a/src/usage/repl.adoc
+++ b/src/usage/repl.adoc
@@ -125,17 +125,14 @@ accomplish the same:
 
 [source,clojure]
 ----
-{:tasks
- {:requires ([babashka.fs :as fs]
-             [babashka.process :as p :refer [process]]
-             [babashka.wait :as wait])
-  nrepl (let [port (with-open [sock (java.net.ServerSocket. 0)] (.getLocalPort sock))
-              proc (process (str "bb nrepl-server " port) {:inherit true})]
-          (wait/wait-for-port "localhost" port)
-          (spit ".nrepl-port" port)
-          (fs/delete-on-exit ".nrepl-port")
-          (deref proc))}}
+{:tasks {nrepl {:requires ([babashka.nrepl.server :as srv])
+                :task (do (srv/start-server! {:host "localhost"
+                                              :port 1339})
+                          (spit ".nrepl-port" "1339")
+                          (deref (promise)))}}}
 ----
+
+The `babashka.nrepl.server` API is exposed since version 0.8.157.
 
 ===== Debugging the nREPL server
 
