--- a/src/usage/repl.adoc
+++ b/src/usage/repl.adoc
@@ -125,11 +125,13 @@ accomplish the same:
 
 [source,clojure]
 ----
-{:tasks {nrepl {:requires ([babashka.nrepl.server :as srv])
-                :task (do (srv/start-server! {:host "localhost"
-                                              :port 1339})
-                          (spit ".nrepl-port" "1339")
-                          (deref (promise)))}}}
+{:tasks
+ {nrepl
+  {:requires ([babashka.nrepl.server :as srv])
+   :task (do (srv/start-server! {:host "localhost"
+                                 :port 1339})
+             (spit ".nrepl-port" "1339")
+             (deref (promise)))}}}
 ----
 
 The `babashka.nrepl.server` API is exposed since version 0.8.157.
