--- a/src/usage/repl.adoc
+++ b/src/usage/repl.adoc
@@ -127,10 +127,14 @@ accomplish the same:
 ----
 {:tasks
  {nrepl
-  {:requires ([babashka.nrepl.server :as srv])
+  {:requires ([babashka.fs :as fs]
+              [babashka.nrepl.server :as srv])
    :task (do (srv/start-server! {:host "localhost"
                                  :port 1339})
              (spit ".nrepl-port" "1339")
+             (-> (Runtime/getRuntime)
+                 (.addShutdownHook
+                  (Thread. (fn [] (fs/delete ".nrepl-port")))))
              (deref (promise)))}}}
 ----
 
