--- a/src/tasks.adoc
+++ b/src/tasks.adoc
@@ -70,6 +70,11 @@ $ bb clean
 Removing target folder.
 ----
 
+=== Talk
+
+Go https://www.youtube.com/watch?v=u5ECoR7KT1Y&ab_channel=LondonClojurians[here]
+if you would like to watch a talk on babashka tasks.
+
 === Task-local options
 
 Instead of naked expressions, tasks can be defined as maps with options. The
