--- a/src/bb-edn.adoc
+++ b/src/bb-edn.adoc
@@ -20,8 +20,11 @@ If we have a project that has a `deps.edn` and would like to reuse those deps in
 
 [source, clojure]
 ----
-{:deps {local/deps {:local/root "."}}}
+{:deps {your-org/your-project {:local/root "."}}}
 ----
+
+NOTE: Use a unique name to refer to your projec's `deps.edn`, the same name that
+you would otherwise use when referring to your project as a dependency.
 
 If we have a main function in a file called `bb/my_project/main.clj` like:
 
