--- a/src/bb-edn.adoc
+++ b/src/bb-edn.adoc
@@ -74,3 +74,17 @@ WARNING: this project requires babashka 0.3.7 or newer, but you have: 0.3.6
 Since babashka 0.4.0 the `bb.edn` file supports the `:tasks` entry which
 describes tasks that you can run in the current project. The tasks feature is
 similar to what people use `Makefile`, `Justfile` or `npm run` for. See <<tasks>> for more details.
+
+=== Script-adjacent bb.edn
+
+Since babashka 1.3.177 a `bb.edn` file relative to the invoked file is
+respected. This makes writing system-global scripts with dependencies easier.
+
+[source,shell]
+----
+~/my_project/bb.edn # dependencies, e.g. {:deps {medley/medley {:mvn/version "1.3.0"}}}
+~/my_project/script.bb # script that uses dependencies, e.g. `(require '[medley.core])`
+/tmp $ # not inside the bb project directory
+/tmp $ export PATH=$PATH:~/my_project # ensure script is on path
+/tmp $ script.bb # works, respects ~/my_project/bb.edn file with :deps
+----
