--- a/src/libraries.adoc
+++ b/src/libraries.adoc
@@ -32,6 +32,7 @@ From Clojure:
 * `clojure.string` aliased as `str`
 * `clojure.stacktrace`
 * `clojure.test`
+* `clojure.walk`
 * `clojure.zip`
 
 Additional libraries:
