--- a/src/tasks.adoc
+++ b/src/tasks.adoc
@@ -394,7 +394,9 @@ When you want to redirect output to a file instead, you can provide the `:out` o
 (shell {:out "file.txt"} "echo hello")
 ----
 
-To capture output as a string, pass the special value `:string` and get the `:out` key from the resulting map. In most cases, you probably want to `trim` away the trailing newline as well:
+To capture output as a string, set `:out` to `:string` and get the `:out` key
+from the resulting map. In most cases, you probably want to `trim` away the
+trailing newline as well:
 
 [source,clojure]
 ----
